# altius

./: CMakeLists.txt  README.md  build.bat  build.sh
src/: Game.cpp  Game.h  Main.cpp
src/gfx/: ConsoleRenderer.cpp  ConsoleRenderer.h  StyledString.cpp  StyledString.h
src/input/: ConsoleInputManager.cpp  ConsoleInputManager.h
src/lib/: olcPixelGameEngine.h
src/log/: EventLog.cpp  EventLog.h
src/scene/: CreditsScene.cpp  CreditsScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.h
src/util/: Random.cpp  Random.h
src/world/: Map.cpp  Map.h  Tile.h
src/world/entity/: Entity.cpp  Entity.h  GoblinEntity.cpp  PlayerEntity.cpp
src/world/entity/ai/: EntityController.h
